--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "flicktionary-client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +14,12 @@
   "bugs": {
     "url": "https://github.com/nicovece/flicktionary-client/issues"
   },
-  "homepage": "https://github.com/nicovece/flicktionary-client#readme"
+  "homepage": "https://github.com/nicovece/flicktionary-client#readme",
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.14.4"
+  }
 }
