--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "sass": "^1.86.1"
+    "sass": "^1.86.1",
+    "prop-types": "^15.8.1"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.14.4"
