--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
+    "react-router": "^7.5.0",
+    "react-router-dom": "^7.5.0",
     "sass": "^1.86.1"
   },
   "devDependencies": {
