--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass": "^1.86.1"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.14.4"
+    "@parcel/transformer-sass": "^2.14.4",
+    "parcel": "^2.14.4"
   }
 }
